# BaseSIM_APEIRON

./: .dockerignore  .gitignore  CLAUDE.md  LICENSE  README.md  cl_only.py  drift_detection_only.py  main.py  mnist_drift_detection_only.py  model.py  mypy.ini  pyproject.toml  readme.md  requirements.txt  resolved_config.json  run_exp.sh  tmp.md  util.py  visualize.py
.github/: pull_request_template.md
.github/workflows/: build-image.yml  build-test.yml  publish.yml
dockerfiles/: Dockerfile
docs/: README.md  configurations.md  continuous_learning.md  create_model_harness.md  drift_detectors.md  model_harness.md  peft_fork_exploration.md
examples/: mnist.toml  mnist_0point5.toml  mnist_0point8.toml  utils.py
examples/MNIST/: data_utils.py  mnist.toml  mnist_0point5.toml  mnist_cl.py  mnist_cnn.py
examples/acoustic_scattering/: acoustic_scattering.toml  acoustic_scattering_cl.toml  acoustic_scattering_offline.toml  compare_tracks.py  model.py
examples/aeris/: aeris.toml  model.py  utils.py
examples/cifar/: cifar10_vgg11.toml  cifar10_vit.toml  model.py
examples/cifar10/: cifar10_vit.toml  model.py  utils.py
examples/drift_detection/: data_utils.py  drift_detection_demo_mnist.py  model.py
examples/gray_scott/: gray_scott.toml  model.py  utils.py
examples/imagenet/: model.py
examples/matey/: Demo_SOLPS_vit.yaml  README.md  input.yaml  matey.toml  matey_batches.py  matey_inference_drift.toml  matey_outer_loop.toml  model.py  model_inference_drift.py  model_outer_loop.py  pyproject.toml  run_inference_drift.sh  run_outer_loop.sh  setup_wandb.sh  stage_solps_shift.sh
examples/matey/src/: __init__.py  matey_batches.py  solps_split.py
examples/mnist/: data_utils.py  mnist-generic.toml  mnist.pth  mnist.toml  mnist_cnn.py  model.py  utils.py
examples/prometheus/: README.md  model.py  prometheus.toml  utils.py
examples/prometheus_tf/: TemporalPredict.py  model.py  utils.py
examples/prometheus_torch/: README.md  model.py  prometheus.toml  reproduce_prometheus.py  utils.py
examples/slac_fel/: model.py  plot.py  plot_data.ipynb  slac-fel.toml  utils.py
jvp_tests/: jvp_backward_mode_test.py  jvp_transformer_test.py  test_direction_magnitude_effect.py  test_jvp_backward.py  test_jvp_transformer_comparison.py
scripts/: scaling_sweep.py
src/: cl_only.py  main.py  mnist_drift_detection_only.py  offline_train.py  util.py  visualize.py
src/apeiron/: __init__.py
src/config/: configuration.py
src/data/: data.py  data_utils.py  mnist_cl.py
src/drift_detection/: __init__.py  base.py  continuous_monitor.py  detector1.py  drift_detection_driver.py  load_drift_detector.py  model_performance_detector.py  statistical_detectors.py
src/driver/: continuous_monitor.py
src/evaluation/: avg_forgetting.py  evaluation.py  metrics.py
src/logger/: __init__.py  console_logger.py  logger.py  mlflow_logger.py  wandb_logger.py
src/logging/: __init__.py  logger.py
tests/: conftest.py  test_config.py  test_continuous_monitor.py  test_continuous_trainer.py  test_drift_detection.py  test_evaluation.py  test_importance_weighting.py  test_logger.py  test_matey_inference_drift.py  test_matey_pretrained_loading.py  test_matey_runsh_harness.py  test_matey_solps_split.py  test_mnist_drift_scores.py  test_model.py  test_model_harness.py  test_profiler.py  test_rocm.py  test_training.py  test_updaters.py  test_valiadation_tests.py
wandb/: latest-run
(+124 files in other folders)
