[project]
name = "basesim-framework"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13,<3.15"
dependencies = [
    "torch (>=2.0)",
    "numpy (>=2.3.4,<3.0.0)",
    "torchvision (>=0.24.1,<0.25.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "pandas-stubs (>=2.3.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "types-tqdm (>=4.66.0)",
    "wandb (>=0.22.0)",
    "mlflow (>=2.10.0)",
    "transformers (>=4.57.1,<5.0.0)",
    "river (>=0.21.0,<0.24.0)",
    "evidently (>=0.4.0,<0.8.0)",
    "matplotlib (>=3.10.7,<4.0.0)"
]

[dependency-groups]
dev = [
    "mypy (>=1.18.2,<2.0.0)",
    "ruff (>=0.14.4,<0.15.0)",
    "black (>=25.11.0,<26.0.0)",
    "pytest (>=9.0.1,<10.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    { include = "*", from = "src" },
]

[tool.ruff]

[tool.ruff.lint]
# Add the codes you want to ignore to the 'ignore' list.
ignore = [
    "F811",  # Redefinition of unused name (often a false positive in PyTorch JIT overloading)
]

[[tool.mypy.overrides]]
module = "evidently.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "mlflow.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["src"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
show_missing = true
